[project]
name = "final-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.4.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "scipy>=1.12.0",
    "xgboost>=2.1.4",
]
